[package]
name = "streetcad"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = ["widgetry/native-backend"]

[dependencies]
abstutil = { git = "https://github.com/dabreegster/abstreet" }
geom = { git = "https://github.com/dabreegster/abstreet" }
log = "0.4.11"
widgetry = { git = "https://github.com/dabreegster/abstreet" }
